--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,8 +1,10 @@
 # Uncomment this line to define a global platform for your project
 # platform :ios, '9.0'
+use_modular_headers!
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+
 
 def parse_KV_file(file, separator='=')
   file_abs_path = File.expand_path(file)
